Improve performance of aba_enrich and get_annotated_genes
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ABAEnrichment@130666 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,11 @@
+CHANGES IN VERSION 1.7.2
+------------------------
+
+IMPROVEMENTS
+	  
+	o performance improvements for aba_enrich and
+	  get_annotated_genes
+
 
 CHANGES IN VERSION 1.7.1
 ------------------------
