--- a/vignettes/ABAEnrichment.Rmd
+++ b/vignettes/ABAEnrichment.Rmd
@@ -93,8 +93,8 @@ In this example no background genes are defined, so all remaining protein-coding
 ## load ABAEnrichment package
 library(ABAEnrichment)
 ## create input vector with candidate genes
-gene_ids = c('NCAPG', 'APOL4', 'NGFR', 'NXPH4', 'C21orf59', 'CACNG2', 'AGTR1', 'ANO1', 
-  'BTBD3', 'MTUS1', 'CALB1', 'GYG1', 'PAX2')
+gene_ids = c('NCAPG', 'APOL4', 'NGFR', 'NXPH4', 'C21orf59', 'CACNG2', 'AGTR1',
+    'ANO1', 'BTBD3', 'MTUS1', 'CALB1', 'GYG1', 'PAX2')
 is_candidate = rep(1, length(gene_ids))
 input_hyper = data.frame(gene_ids, is_candidate)
 head(input_hyper)
@@ -106,7 +106,8 @@ An example with the developmental effect score (`dev_effect`) can be found [belo
 
 
 ```{r, eval=FALSE}
-## run enrichment analyses with default parameters for the adult and developing human brain
+## run enrichment analyses with default parameters 
+## for the adult and developing human brain
 res_adult = aba_enrich(input_hyper, dataset='adult')
 res_devel = aba_enrich(input_hyper, dataset='5_stages')
 ```
@@ -115,8 +116,10 @@ In the following examples two additional parameters are set to lower computation
 `cutoff_quantiles` and `n_randsets` have default values `seq(0.1,0.9,0.1)` and `1000`, respectively.
 
 ```{r,results='hide'}
-## run enrichment analysis with less cutoffs and randomsets to save computation time
-res_devel = aba_enrich(input_hyper, dataset='5_stages', cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
+## run enrichment analysis with less cutoffs and randomsets
+## to save computation time
+res_devel = aba_enrich(input_hyper, dataset='5_stages',
+    cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
 ```
 
 The function `aba_enrich` returns a list, the first element of which contains the results of the statistical analysis for each brain region and age category (analyses are performed independently for each developmental stage):
@@ -124,7 +127,8 @@ The function `aba_enrich` returns a list, the first element of which contains th
 ```{r}
 ## extract first element from the output list, which contains the statistics
 fwers_devel = res_devel[[1]]
-## see results for the brain regions with highest enrichment for children (3-11 yrs, age_category 3)
+## see results for the brain regions with highest enrichment
+## for children (3-11 yrs, age_category 3)
 fwers_3 = fwers_devel[fwers_devel[,1]==3, ]
 head(fwers_3)
 ```
@@ -151,7 +155,8 @@ The option `ref_genome='grch38'` uses gene coordinates from the GRCh38 genome (G
 ```{r,eval=FALSE} 
 ## run enrichment analysis, with randomsets dependent on gene length
 res_len = aba_enrich(input_hyper, gene_len=TRUE)
-## run the same analysis using gene coordinates from GRCh38 instead of the default GRCh37
+## run the same analysis using gene coordinates
+## from GRCh38 instead of the default GRCh37
 res_len_grch38 = aba_enrich(input_hyper, gene_len=TRUE, ref_genome='grch38')
 ```
 
@@ -168,8 +173,10 @@ input_wicox = data.frame(gene_ids, scores)
 head(input_wicox)
 ```
 ```{r, results='hide'}
-## test for enrichment of expressed genes with high scores in the adult brain using the Wilcoxon rank-sum test
-res_wilcox = aba_enrich(input_wicox, test='wilcoxon', cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
+## test for enrichment of expressed genes with high scores in the adult brain
+## using the Wilcoxon rank-sum test
+res_wilcox = aba_enrich(input_wicox, test='wilcoxon',
+    cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
 ```
 ```{r}
 head(res_wilcox[[1]])
@@ -182,10 +189,13 @@ When genes are associated with two counts *A* and *B*, e.g. amino-acid changes s
 ```{r}
 ## create a toy example dataset with two counts per gene
 high_A_genes = c('RFFL', 'NTS', 'LIPE', 'GALNT6', 'GSN', 'BTBD16', 'CERS2')
-low_A_genes = c('GDA', 'ENC1', 'EGR4', 'NPTX1', 'VIPR1', 'DOC2A', 'OASL', 'FRY', 'NAV3')
-A_counts = c(sample(20:30, length(high_A_genes)), sample(5:15, length(low_A_genes)))
-B_counts = c(sample(5:15, length(high_A_genes)), sample(20:30, length(low_A_genes)))
-input_binom = data.frame(gene_ids=c(high_A_genes, low_A_genes), A_counts, B_counts)
+low_A_genes = c('GDA', 'ENC1', 'EGR4', 'VIPR1', 'DOC2A', 'OASL', 'FRY', 'NAV3')
+A_counts = c(sample(20:30, length(high_A_genes)),
+    sample(5:15, length(low_A_genes)))
+B_counts = c(sample(5:15, length(high_A_genes)),
+    sample(20:30, length(low_A_genes)))
+input_binom = data.frame(gene_ids=c(high_A_genes, low_A_genes),
+    A_counts, B_counts)
 head(input_binom)
 ```
 
@@ -193,7 +203,8 @@ In this example also the `silent` option is used, which suppresses all output th
 
 ```{r}
 ## run binomial test
-res_binom = aba_enrich(input_binom, cutoff_quantiles=c(0.2,0.9), test='binomial', n_randsets=100, silent=TRUE)
+res_binom = aba_enrich(input_binom, cutoff_quantiles=c(0.2,0.9),
+    test='binomial', n_randsets=100, silent=TRUE)
 head(res_binom[[1]])
 ```
 
@@ -204,23 +215,26 @@ When genes are associated with four counts (*A*-*D*), e.g. non-synonymous or syn
 ```{r}
 ## create a toy example with four counts per gene
 high_substi_genes = c('RFFL', 'NTS', 'LIPE', 'GALNT6', 'GSN', 'BTBD16', 'CERS2')
-low_substi_genes = c('GDA', 'ENC1', 'EGR4', 'NPTX1', 'VIPR1', 'DOC2A', 'OASL', 'FRY', 'NAV3')
+low_substi_genes = c('ENC1', 'EGR4', 'NPTX1', 'DOC2A', 'OASL', 'FRY', 'NAV3')
 subs_non_syn = c(sample(5:15, length(high_substi_genes), replace=TRUE),
     sample(0:5, length(low_substi_genes), replace=TRUE))
-subs_syn = sample(5:15, length(c(high_substi_genes, low_substi_genes)), replace=TRUE)
+subs_syn = sample(5:15, length(c(high_substi_genes, low_substi_genes)),
+    replace=TRUE)
 vari_non_syn = c(sample(0:5, length(high_substi_genes), replace=TRUE),
     sample(0:10, length(low_substi_genes), replace=TRUE))
-vari_syn = sample(5:15, length(c(high_substi_genes, low_substi_genes)), replace=TRUE)
+vari_syn = sample(5:15, length(c(high_substi_genes, low_substi_genes)),
+    replace=TRUE)
 input_conti = data.frame(gene_ids=c(high_substi_genes, low_substi_genes),
     subs_non_syn, subs_syn, vari_non_syn, vari_syn)
 head(input_conti)
 
 ## the corresponding contingency table for the first gene would be:
-matrix(input_conti[1, 2:5], ncol=2,
-    dimnames=list(c('non-synonymous', 'synonymous'),c('substitution','variable')))
+matrix(input_conti[1, 2:5], ncol=2, dimnames=list(c('non-synonymous',
+    'synonymous'), c('substitution','variable')))
 ```
 ```{r, results='hide'}
-res_conti = aba_enrich(input_conti, test='contingency', cutoff_quantiles=c(0.7,0.8,0.9), n_randset=100)
+res_conti = aba_enrich(input_conti, test='contingency',
+    cutoff_quantiles=c(0.7,0.8,0.9), n_randset=100)
 
 ```
 The output is analogous to that of the other tests:
@@ -251,14 +265,16 @@ The second element of the output list contains the candidate and background gene
 ```{r} 
 ## create input vector with a candidate region on chromosome 8
 ## and background regions on chromosome 7, 8 and 9
-regions = c('8:82000000-83000000', '7:1300000-56800000', '7:74900000-148700000',
-  '8:7400000-44300000', '8:47600000-146300000', '9:0-39200000', '9:69700000-140200000')
+regions = c('8:82000000-83000000', '7:1300000-56800000',
+    '7:74900000-148700000', '8:7400000-44300000', '8:47600000-146300000',
+    '9:0-39200000', '9:69700000-140200000')
 is_candidate = c(1, rep(0,6))
 input_region = data.frame(regions, is_candidate)
 ```
 ```{r,results='hide'} 
 ## run enrichment analysis for the adult human brain
-res_region = aba_enrich(input_region, dataset='adult', cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
+res_region = aba_enrich(input_region, dataset='adult',
+    cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
 ```
 ```{r}
 ## look at the results from the enrichment analysis
@@ -290,7 +306,8 @@ If `background=TRUE`, the gene expression data for both, candidate genes and bac
 
 
 ```{r}
-## get expression data for the first 5 brain regions from the last aba_enrich-analysis
+## get expression data for the first 5 brain regions
+## from the last aba_enrich-analysis
 top_regions = fwers_region[1:5, 'structure_id']
 top_regions
 expr = get_expression(top_regions, background=FALSE)
@@ -301,10 +318,11 @@ The same output would be created independently of an `aba_enrich` analysis by, i
 Like in all functions of the *ABAEnrichment* package `gene_ids` can be *Entrez-ID*, *Ensembl-ID* or *gene-symbol*.
 ```{r, eval=FALSE}
 ## get expression data independent from previous aba_enrich analysis
-regions = c('Allen:12926', 'Allen:4738', 'Allen:4671', 'Allen:12909', 'Allen:4718')
+regions = c('Allen:12926', 'Allen:4738', 'Allen:4671', 'Allen:12909')
 gene_ids = c('CHMP4C', 'FABP12', 'FABP4', 'FABP5', 'FABP9', 'IMPA1',
-  'PAG1', 'PMP2', 'SLC10A5', 'SNX16', 'ZFAND1') 
-expr2 = get_expression(regions, gene_ids=gene_ids, dataset='adult', background=FALSE)
+    'PAG1', 'PMP2', 'SLC10A5', 'SNX16', 'ZFAND1') 
+expr2 = get_expression(regions, gene_ids=gene_ids, dataset='adult',
+    background=FALSE)
 ```
 
 For the `5_stages` dataset the output of `get_expression` is a list with a data frame for each developmental stage, where the first element corresponds to the first developmental stage, the second element to the second developmental stage, and so on.
@@ -323,7 +341,8 @@ The usage of `plot_expression` is similar to that of `get_expression`.
 Providing only brain regions as input, it plots the expression data for the genes and dataset used in the last `aba_enrich` call.
 
 ```{r}
-## get expression data for the first 5 brain regions from the last aba_enrich-analysis
+## get expression data for the first 5 brain regions
+## from the last aba_enrich-analysis
 top_regions = fwers_region[1:5, 'structure_id']
 plot_expression(top_regions, background=FALSE)
 ```
@@ -344,10 +363,12 @@ In that case the arguments `gene_ids` and `dataset` have to be defined.
 If the `5_stages` dataset is used, the additional argument `age_category` selects the developmental stage for which the expression data should be plotted:
 
 ```{r}
-## plot expression of some genes for the frontal neocortex (Allen:10161) in age category 3 (children, 3-11 yrs)
-gene_ids = c('ENSG00000157764', 'ENSG00000163041', 'ENSG00000182158', 'ENSG00000147889',
-  'ENSG00000103126', 'ENSG00000184634')
-plot_expression('Allen:10161', gene_ids=gene_ids, dataset='5_stages', age_category=3)
+## plot expression of some genes for the frontal neocortex (Allen:10161)
+## in age category 3 (children, 3-11 yrs)
+gene_ids = c('ENSG00000157764', 'ENSG00000163041', 'ENSG00000182158',
+    'ENSG00000147889', 'ENSG00000103126', 'ENSG00000184634')
+plot_expression('Allen:10161', gene_ids=gene_ids, dataset='5_stages',
+    age_category=3)
 ```
 
 In this example the *frontal neocortex* (Allen:10161) was not sampled directly for expression measurements, but some of its substructures have expression data annotated.
@@ -365,7 +386,8 @@ The function `get_sampled_substructures` returns the IDs of all the substructure
 The function `get_name` is useful to see the name of a brain region given a structure ID:
 
 ```{r}
-## get IDs of the substructures of the frontal neocortex (Allen:10161) for which expression data are available
+## get IDs of the substructures of the frontal neocortex (Allen:10161)
+## for which expression data are available
 subs = get_sampled_substructures('Allen:10161')
 subs
 ## get the full name of those substructures
@@ -385,9 +407,9 @@ However, the ontology functions `get_name`, `get_sampled_substructures` and `get
 ### get_id
 The function `get_id` searches the ontologies of the adult and developing brain for the structure ID that belongs to a given brain region name:
 ```{r}
-## get structure IDs of brain regions that contain 'accumbens' in their names
+## get structure IDs of brain regions that contain 'accumbens' in their name
 get_id('accumbens')
-## get structure IDs of brain regions that contain 'telencephalon' in their names
+## get structure IDs of brain regions that contain 'telencephalon' in their name
 get_id('telencephalon')
 ```
 Note that the output of `get_id` is restricted to brain regions that are used in *ABAEnrichment*.
@@ -408,12 +430,14 @@ This function takes the output from `aba_enrich` and a FWER-threshold (`fwer_thr
 Note that a brain region gets all genes annotated that are expressed in the brain region itself or in any of the sampled substructures (see [Schematic 1](#hyper_scheme) below).
 
 ```{r, results='hide'}
-## run an enrichment analysis with 7 candidate and 7 background genes for the developing brain
+## run an enrichment analysis with 7 candidate and 7 background genes
+## for the developing brain
 gene_ids = c('FOXJ1', 'NTS', 'LTBP1', 'STON2', 'KCNJ6', 'AGT', 
   'ANO3', 'TTR', 'ELAVL4', 'BEAN1', 'TOX', 'EPN3', 'PAX2', 'KLHL1')
 is_candidate = rep(c(1,0), each=7)
 input_hyper = data.frame(gene_ids, is_candidate)
-res = aba_enrich(input_hyper, dataset='5_stages', cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
+res = aba_enrich(input_hyper, dataset='5_stages',
+    cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
 ```
 ```{r}
 head(res[[1]])
@@ -427,7 +451,8 @@ The function then returns all genes that have expression above the cutoffs in th
 If `genes` are defined, the output is reduced to this set of genes; if not, all protein-coding genes with available expression data are analyzed.
 
 ```{r}
-## find out which of the above genes have expression above the 70% and 90% expression-cutoff, respectively,
+## find out which of the above genes have expression
+## above the 70% and 90% expression-cutoff
 ## in the basal ganglia of the adult human brain (Allen:4276)
 anno2 = get_annotated_genes(structure_ids='Allen:4276', dataset='adult', 
   cutoff_quantiles=c(0.7,0.9), genes=gene_ids)
@@ -449,7 +474,8 @@ head(input_hyper)
 ```
 ```{r,results='hide'}
 ## run enrichment analysis with developmental effect score
-res_dev_effect = aba_enrich(input_hyper, dataset='dev_effect', cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
+res_dev_effect = aba_enrich(input_hyper, dataset='dev_effect',
+    cutoff_quantiles=c(0.5,0.7,0.9), n_randsets=100)
 ```
 ```{r}
 ## see the 5 brain regions with the lowest FWERs
@@ -459,7 +485,7 @@ top_regions
 
 As for the expression datasets, the developmental effect scores can be retrieved with the functions `get_expression` and plotted with `plot_expression`:
 ```{r}
-## plot developmental effect score of the 5 brain structures with the lowest FWERs
+## plot developmental effect score of the 5 brain regions with the lowest FWERs
 plot_expression(top_regions[ ,'structure_id'])
 ```
 
