change title for genomic regions figure

--- a/vignettes/ABAEnrichment.Rmd
+++ b/vignettes/ABAEnrichment.Rmd
@@ -507,7 +507,7 @@ The FWER for the Wilcoxon rank-sum test is computed in a similar way, with rando
 
 ## Schematic 2: `circ_chrom` option for genomic regions input
 
-![genomic regions](./Skizze_Fig2.png 'options for genomic regions input')
+![options for genomic regions input](./Skizze_Fig2.png 'options for genomic regions input')
 
 To use genomic regions as input, the first column of the `genes` input dataframe has to be of the form `chr:start-stop`.
 The option `circ_chrom` defines how candidate regions are randomly moved inside the background regions for computing the FWER.
