--- a/vignettes/ABAEnrichment.Rmd
+++ b/vignettes/ABAEnrichment.Rmd
@@ -186,7 +186,7 @@ head(res_wilcox[[1]])
 ```
 
 
-## NEW: Test for gene expression enrichment using the binomial test
+## Test for gene expression enrichment using the binomial test
 When genes are associated with two counts *A* and *B*, e.g. amino-acid changes since a common ancestor in two species, a binomial test can be used to identify brain regions with an enrichment of expressed genes with a high fraction *A/(A+B)* compared to the fraction of *A* in the brain in general (the root node). To perform the binomial test the input dataframe needs a column with the gene symbols and two additional columns with the corresponding counts:
 
 ```{r}
@@ -212,7 +212,7 @@ head(res_binom[[1]])
 ```
 
 
-## NEW: Test for gene expression enrichment using the 2x2 contingency table test
+## Test for gene expression enrichment using the 2x2 contingency table test
 When genes are associated with four counts (*A*-*D*), e.g. non-synonymous or synonymous variants that are fixed between or variable within species, like for a McDonald-Kreitman test [6], the 2x2 contingency table test can be used. It can identify brain regions which have a high ratio of *A/B* compared to *C/D*, which in this example would correspond to a high ratio of *non-synonymous substitutions / synonymous substitutions* compared to *non-synonymous variable / synonymous variable*:
 
 ```{r}
